--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/haneulee/Nuber#readme",
   "dependencies": {
     "@types/node": "^12.0.0",
+    "cors": "^2.8.5",
+    "graphql-yoga": "^1.17.4",
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
     "ts-node": "^8.1.0",
     "tslint-config-prettier": "^1.18.0",
