--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
+    "pg": "^7.11.0",
     "ts-node": "^8.1.0",
     "tslint-config-prettier": "^1.18.0",
+    "typeorm": "^0.2.17",
     "typescript": "^3.4.5"
   }
 }
