--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/haneulee/Nuber#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^12.0.0",
+    "bcrypt": "^3.0.6",
+    "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "gql-merge": "0.0.6",
