--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/node": "^12.0.0",
+    "@types/twilio": "0.0.10",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "pg": "^7.11.0",
     "ts-node": "^8.1.0",
     "tslint-config-prettier": "^1.18.0",
+    "twilio": "^3.34.0",
     "typeorm": "^0.2.17",
     "typescript": "^3.4.5"
   }
