--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/haneulee/Nuber#readme",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/node": "^12.0.0",
     "@types/twilio": "0.0.10",
     "bcrypt": "^3.0.6",
@@ -32,6 +33,7 @@
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
