--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.3",
+    "@types/mailgun-js": "^0.22.3",
     "@types/node": "^12.0.0",
     "@types/twilio": "0.0.10",
     "bcrypt": "^3.0.6",
@@ -34,6 +35,7 @@
     "graphql-yoga": "^1.17.4",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
