--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "predev": "npm run types",
     "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
     "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
-    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts",
+    "prebuild": "rm -rf dist",
+    "build": "tsc",
+    "postbuild": "cd src && copy ./api/**/*.graphql ../dist/api",
+    "start": "cd dist && node ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +31,7 @@
     "@types/twilio": "0.0.10",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.9.1",
+    "copy": "^0.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "gql-merge": "0.0.6",
@@ -39,6 +44,7 @@
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
+    "now": "^16.4.3",
     "pg": "^7.11.0",
     "ts-node": "^8.1.0",
     "tslint-config-prettier": "^1.18.0",
